# blaze

./: .drone.yml  .gitignore  CONTRIBUTING.md  Cross.toml  LICENCE  README.md  TODO  bootstrap.sh  compose.jsonnet  targets.jsonnet  workspace.jsonnet
.blaze/: variables.jsonnet
assets/: project.jsonnet
ci/: .drone.jsonnet  project.jsonnet
cli/: .cache.json  Cargo.toml  README.md  project.jsonnet
cli-docs/: .cache.json  .gitignore  Cargo.toml  project.jsonnet
cli-docs/src/: argument-identifier.handlebars  command.handlebars  main.rs  option-identifier.handlebars
cli/src/: command.rs  context.rs  lib.rs  main.rs  subcommand.rs
cli/src/subcommands/: describe.rs  double.rs  help.rs  init.rs  mod.rs  render.rs  rm_cache.rs  run.rs  selection_args.rs  spawn.rs  version.rs
common/: Cargo.toml  README.md  project.jsonnet
common/src/: cache.rs  configuration_file.rs  dependency.rs  enums.rs  error.rs  executor.rs  lib.rs  logger.rs  parallelism.rs  project.rs  selector.rs  settings.rs  shell.rs  target.rs  time.rs  util.rs  variables.rs  workspace.rs
core/: Cargo.toml  README.md  build.rs  local-env.jsonnet  project.jsonnet
core/src/: lib.rs
core/src/executions/: check.rs  command_fails.rs  env_changes.rs  execution.rs  executor_update.rs  file_changes.rs  files_missing.rs  graph.rs  mod.rs  propagating_children.rs  ttl.rs
core/src/executors/: bridge.rs  env.rs  executor.rs  mod.rs
core/src/executors/node/: bridge.rs  executor.rs  loaders.rs  mod.rs  package.rs  prelude.rs
core/src/executors/resolve/: builder.rs  cargo.rs  file_system.rs  git.rs  git_common.rs  http_git.rs  kinds.rs  loader.rs  mod.rs  npm.rs  resolver.rs  ssh_git.rs  standard.rs
core/src/executors/rust/: executor.rs  loaders.rs  mod.rs  package.rs
core/src/executors/std/: mod.rs  options.rs
core/src/executors/std/commands/: command.rs  mod.rs  runner.rs
core/src/executors/std/exec/: mod.rs
core/src/logging/: colors.rs  main_logger.rs  mod.rs
core/src/system/: env.rs  file_changes.rs  glob.rs  hash.rs  ipc_server.rs  locks.rs  mod.rs  npm.rs  parallel_executor.rs  process.rs  random.rs  repository.rs  shell.rs  thread.rs  time.rs
core/src/usecases/: describe.rs  global.rs  init.rs  mod.rs  render.rs  rm_cache.rs  run.rs  spawn.rs
core/src/workspace/: cache_store.rs  configurations.rs  mod.rs  project_handle.rs  schemas.rs  selection.rs  template.rs  variables.rs  workspace_handle.rs
core/src/workspace/init/: mod.rs
core/src/workspace/init/json/: project.handlebars  variables.handlebars  workspace.handlebars
core/src/workspace/init/jsonnet/: project.handlebars  user-variables.handlebars  variables.handlebars  workspace.handlebars
core/src/workspace/init/yml/: project.handlebars  user-variables.handlebars  variables.handlebars  workspace.handlebars
downloads/: Cargo.toml  Dockerfile  docker-compose.yml  project.jsonnet
downloads/fixtures/0.0.2/x86_64-linux-gnu/: metadata.json
downloads/src/: error.rs  main.rs  versions.rs
node/bridge/: .cache.json  README.md  package-lock.json  package.json  project.jsonnet  tsconfig.json
node/bridge/src/: main.ts
node/devkit/: .cache.json  README.md  eslint.config.mjs  package-lock.json  package.json  project.jsonnet  tsconfig.json
node/devkit/src/: index.ts
rust/bridge/: .gitignore  Cargo.toml  README.md  project.jsonnet
rust/bridge/src/: main.rs
rust/devkit/: .cache.json  Cargo.toml  README.md  project.jsonnet
rust/devkit/src/: lib.rs
schemas/: .cache.json  .gitignore  README.md  eslint.config.mjs  package-lock.json  package.json  project.jsonnet  tsconfig.json
schemas/src/: dependencies.ts  executor.ts  log-level.ts  main.ts  matchers.ts  names.ts  parallelism.ts  project-selector.ts  project.ts  target-cache.ts  utils.ts  workspace.ts
tests/: .cache.json  .gitignore  Cargo.toml  build.rs  project.jsonnet
tests/tests/: cache_after_duration.rs  cache_command_fails.rs  cache_file_changes.rs  cache_files_missing.rs  cache_propagation.rs  dependencies.rs  env_files.rs  executor_fs_node.rs  executor_fs_rust.rs  executor_node.rs  executor_rust.rs  run_dummy.rs  run_parallel_unix.rs  run_selectors.rs  std_commands.rs  std_exec.rs
tests/tests/fixtures/env/: .env  .gitignore  .user.env
tests/tests/fixtures/executors/node-checker/: .gitignore  build_hash  package-lock.json  package.json  tsconfig.json
tests/tests/fixtures/executors/node-checker/src/: index.ts
tests/tests/fixtures/executors/rust-checker/: .gitignore  Cargo.toml  build.rs
tests/tests/fixtures/executors/rust-checker/src/: lib.rs
tests/tests/fixtures/files/: source.txt
tests/tests/fixtures/scripts/: dummy.ps1  dummy.sh
tests/tests/testing/: commands.rs  executions.rs  mod.rs  util.rs  workspace.rs
website/: .cache.json  .gitignore  Dockerfile  README.md  docker-compose.yml  docusaurus.config.js  eslint.config.mjs  package-lock.json  package.json  project.jsonnet  sidebars.js  tsconfig.json
website/conf/: nginx.conf
website/docs/: introduction.mdx
website/docs/configuration/project/: schema.mdx  (+1 more)
website/docs/executors/: executors.mdx
website/docs/guides/: caching.mdx  dependencies.mdx  environment.mdx  get-started.mdx  running-commands.mdx  running-targets.mdx  templating.mdx  workspace.mdx  writing-targets.mdx
website/docs/variables/: globals.js  project.js  vars.js  workspace.js
website/src/css/: custom.css
website/src/pages/: about.js  about.module.css  downloads.js  index.js  index.module.css
website/src/services/: downloads.js
(+15 files in other folders)
