[package]
name = "blaze-common"
description = "Blaze common shared types."
repository = "https://github.com/rnza0u/blaze.git"
homepage = "https://blaze-monorepo.dev"
license = "MIT"
version = "0.2.13"
edition = "2021"

[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hash-value = { version = "1.0" }
anyhow = "1.0"
strum = "0.26"
url = { version = "2.3", features = ["serde"] }
strum_macros = "0.26"
serde = { version = "1.0", features = ["derive"] }
paste = "1.0"
base64 = "0.22"