[package]
name = "blaze-core"
description = "Blaze as a library."
repository = "https://github.com/rnza0u/blaze.git"
homepage = "https://blaze-monorepo.dev"
license = "MIT"
version = "0.2.16"
edition = "2021"

[lib]

[dependencies]
possibly = "1.0"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
rand = "0.8.5"
strum = "0.26"
strum_macros = "0.26"
colored = "2.1"
dotenvy = "0.15"
regex = "1.10"
url = "2.5"
toml = "0.8"
anyhow = "1.0"
interprocess = "2.0"
whoami = "1.5"
wax = "0.6.0"
shared_child = "1.0"
once_cell = "1.19"
paste = "1.0"
terminal_size = "0.3"
tabled = "0.15"
serde_cbor = "0.11"
fs4 = "0.8"
dunce = "1.0"
blaze-common= { version = "0.2.16", path = "../common" }

[dependencies.git2]
version = "0.19"
default-features = false
features = ["ssh", "https", "ssh_key_from_memory", "vendored-libgit2", "vendored-openssl"]

[dependencies.xxhash-rust]
version = "0.8"
features = ["xxh3", "xxh64"]

[dependencies.jsonschema]
version = "0.18"
default-features = false
features = ["draft202012"]

[dependencies.jrsonnet-stdlib]
version = "0.5.0-pre95"
features = ["exp-null-coaelse"]

[dependencies.jrsonnet-evaluator]
version = "0.5.0-pre95"
features = ["exp-destruct", "exp-object-iteration", "exp-null-coaelse"]

[dependencies.handlebars]
version = "5.1.0"
features = ["string_helpers", "script_helper"]

[build-dependencies]
tar = "0.4"
flate2 = "1.0"
sha2 = "0.10"

[build-dependencies.blaze-rust-bridge]
version = "0.2.16"
artifact = "bin"
target = "target"
path = "../rust/bridge"

[build-dependencies.reqwest]
version = "0.12"
features = ["blocking"]

[features]
default_features = []
testing = []

[target.x86_64-pc-windows-gnu]
rustflags = ["-C", "target-feature=+crt-static"]
