[package]
name = "blaze-downloads"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.26"
strum_macros = "0.26"
actix-files = "0.6"
actix-cors = "0.7"
env_logger = "0.11"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1