[package]
name = "blaze-tests"
description = "Blaze integration tests suite."
license = "MIT"
repository = "https://github.com/rnza0u/blaze.git"
homepage = "https://blaze-monorepo.dev"
version = "0.2.15"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
blaze-core = { version = "0.2.15", features = ["testing"], path = "../core" }
serde = { version = "1.0" }
serde_json = "1.0"
assert-json-diff = "2.0.2"
paste = "1.0"
rand = "0.8.5"
glob = "0.3.1"
filetime = "0.2"
once_cell = "1.19.0"
